feat: refactor and subtitles

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <span id="camera-mode-box">Current mode: Fixed-Position Camera</span>
     <span>Press 1: Fixed-Position Camera | Press 2: User-Controlled Camera</span>
   </div>
+  <div id="subtitles" aria-live="polite"></div>
 
   <!-- Main logic -->
   <script type="module" src="main.js"></script>
